# pytest-readable

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  specview.py
docs/: test_query_pipeline.spec.md
pytest_specview/: __init__.py  cli.py
pytest_specview/locale/en/LC_MESSAGES/: specview.mo  specview.po
pytest_specview/locale/es/LC_MESSAGES/: specview.po
pytest_translator/: __init__.py  cli.py  compile_locales.py  decorators.py  i18n.py
pytest_translator/locale/en/LC_MESSAGES/: pytest_translator.mo  pytest_translator.po  specview.po
pytest_translator/locale/es/LC_MESSAGES/: pytest_translator.mo  pytest_translator.po  specview.mo  specview.po
src/pytest_readable/: __init__.py  cli.py  compile_locales.py  decorators.py  i18n.py  language_registry.py  plugin.py
src/pytest_readable/core/: __init__.py  exporters.py  models.py  parser.py  path_strategies.py  renderer.py  services.py
src/pytest_readable/locale/en/LC_MESSAGES/: pytest_readable.mo  pytest_readable.po
src/pytest_readable/locale/es/LC_MESSAGES/: pytest_readable.mo  pytest_readable.po
tests/: conftest.py  test_core.py  test_core.spec.md  test_i18n.py  test_i18n.spec.md  test_plugin.py  test_plugin.spec.md
