[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-translator"
version = "0.1.0"
description = "Interactive natural-language spec viewer for pytest projects"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }

[project.scripts]
pytest-translator = "pytest_translator.cli:main"
pytest-translator-compile-locales = "pytest_translator.compile_locales:main"

[tool.setuptools.packages.find]
include = ["pytest_translator*"]

[tool.setuptools.package-data]
pytest_translator = ["locale/*/LC_MESSAGES/*.po", "locale/*/LC_MESSAGES/*.mo"]
