[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-readable"
version = "0.1.0"
description = "Native pytest plugin that renders readable test specs and exports docs"
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = ["pytest>=9.0,<10.0"]

[project.entry-points.pytest11]
readable = "pytest_readable.plugin"

[project.scripts]
readable = "pytest_readable.cli:main"
pytest-readable-compile-locales = "pytest_readable.compile_locales:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytest_readable*"]

[tool.setuptools.package-data]
pytest_readable = ["locale/*/LC_MESSAGES/*.po", "locale/*/LC_MESSAGES/*.mo"]
