[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-readable"
version = "0.2.0"
description = "Pytest plugin that renders readable test specifications and exports documentation"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "LuigiD5555" }
]
keywords = ["pytest", "testing", "documentation", "plugin", "specifications"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: Pytest",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Testing",
  "Topic :: Documentation",
]

dependencies = [
  "pytest>=9.0,<10.0",
]

[project.urls]
Homepage = "https://github.com/LuigiD5555/pytest-readable"
Repository = "https://github.com/LuigiD5555/pytest-readable"
Issues = "https://github.com/LuigiD5555/pytest-readable/issues"

[project.entry-points.pytest11]
readable = "pytest_readable.plugin"

[project.scripts]
readable = "pytest_readable.cli:main"
pytest-readable-compile-locales = "pytest_readable.compile_locales:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["pytest_readable*"]

[tool.setuptools.package-data]
pytest_readable = ["locale/*/LC_MESSAGES/*.po", "locale/*/LC_MESSAGES/*.mo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["temp", "build", "dist", ".git", ".pytest_cache", ".mypy_cache"]
